cargo-features = ["profile-rustflags"]

[package]
name = "flexmap"
version = "0.1.0"
edition = "2021"
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
kmerrs = { path = "/usr/users/QIB_fr017/fritsche/ProjectsPrivate/kmerrs/" }
bioreader = { path = "/usr/users/QIB_fr017/fritsche/ProjectsPrivate/bioreader/" }
savefile = { version="0.16.5", feature="derive" }
savefile-derive = "0.16.5"

[profile.release]
opt-level = 3               # Use best optimizations
overflow-checks = false     # Disable integer overflow checks.
rustflags = ["-C", "target-feature=+avx,+sse3,+avx2,+fma"]#
