cargo-features = ["profile-rustflags"]

[package]
name = "flexmap"
version = "0.1.0"
edition = "2021"
channel = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
kmerrs = { git = "https://github.com/4less/kmerr.git" }
bioreader = { git = "https://github.com/4less/bioreader.git" }
savefile = { version="0.17", feature="derive" }
savefile-derive = "0.17"
ser_raw = "0.1.0"
serde = { version = "1.0.207", features = ["derive"] }
serde_derive = "1.0.207"
bincode = { version = "2.0.0-rc.3" }
fxhash = "0.2.1"
bytemuck = { version = "1.16", features = ["derive"] }

[profile.release]
opt-level = 3               # Use best optimizations
overflow-checks = false     # Disable integer overflow checks.
rustflags = ["-C", "target-feature=+avx,+sse3,+avx2,+fma"]#
